// Components
import VSheet from '..'

// Utilities
import { createTheme, VuetifyThemeSymbol } from '@/composables/theme'
import { mount } from '@vue/test-utils'
import { VuetifySymbol } from '@/framework'

describe('VSheet', () => {
  function mountFunction (options = {}) {
    return mount(VSheet, {
      global: {
        provide: {
          [VuetifySymbol as symbol]: { defaults: { global: {} } },
          [VuetifyThemeSymbol as symbol]: createTheme(),
        },
      },
      ...options,
    })
  }

  it('should match a snapshot', () => {
    const wrapper = mountFunction()

    expect(wrapper.html()).toMatchSnapshot()
  })

  it('should use color prop if provided', async () => {
    const wrapper = mountFunction({
      props: {
        color: 'primary',
      },
    })

    expect(wrapper.html()).toMatchSnapshot()

    await wrapper.setProps({ color: '#ff00ff' })

    expect(wrapper.html()).toMatchSnapshot()
  })
})
